syntax = "proto3";

package com.fyordo.cms;

service AgentChannelService {
  rpc WatchProperties (stream AgentStreamEvent) returns (stream ServerStreamEvent);
}

// ================== AGENT EVENTS ==================

message AgentStreamEvent {
  oneof command {
    AgentHeartbeatEvent heartbeat = 1;
    AgentConnectEvent connect = 2;
  }
}

message AgentHeartbeatEvent {
  int64 timestampMs = 1;
}

message AgentConnectEvent {
  string namespace = 1;
  string service = 2;
  string appId = 3;
}

// ================== SERVER EVENTS ==================

message ServerStreamEvent {
  oneof command {
    ServerInitEvent initEvent = 1;
    ServerPropertyUpdateEvent updateEvent = 2;
  }
}

message Property {
  string key = 1;
  bytes value = 2;
}

message ServerInitEvent {
  repeated Property properties = 1;
}

message ServerPropertyUpdateEvent {
  Property property = 1;
  int64 lastModifiedMs = 3;
}